style(followers.css): decrease font size of profile-name and add color grey fix(followers.ejs): wrap Home item in an anchor tag style(followers.ejs): decrease font size of profile-name and change h2 to h5 remove(profile.ejs): remove commented out code at the end of the file

--- a/public/stylesheets/followers.css
+++ b/public/stylesheets/followers.css
@@ -7,9 +7,6 @@
     padding: 20px;
     width: 250px;
   }
-  h2{
-    color: white;
-  }
   .profile-wrapper{
     display: flex;
     flex-flow: row wrap;
@@ -27,7 +24,8 @@
   
   .profile-name {
     margin-top: 10px;
-    font-size: 24px;
+    font-size: 18px;
+    color: grey;
   }
   
   .follow-button {
